Fix 1px shifting on tranform opacity on webkit browsers.

--- a/static/css/article_edit.css
+++ b/static/css/article_edit.css
@@ -144,6 +144,8 @@
 {
     cursor: pointer;
     transition: all 0.5s;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
 }
 
 #host_image_container:hover
